--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -95,7 +95,6 @@ body {
 
 body {
   background-color     : hsl(var(--bg-primary));
-  display              : grid;
   font-family          : var(--font-body);
   font-size            : var(--type-size);
   grid-template-columns: 100vw;
@@ -191,8 +190,6 @@ a {
 }
 
 #main {
-  margin-top: 5.5rem;
-
   &.bleed {
     margin-top: 0;
   }
